<resources>
    <string name="app_name">UEE_Project</string>


    <string name="name_my">Sithum</string>
    <string name="btn_Letsgoo2">btn_letsgoo</string>
    <string name="btn_Letsgoo1">btn_letsgoo</string>
    <string name="text_descript2">descrip_2</string>
    <string name="text_discription1">descrip_1</string>
    <string name="txt_Servises">text2</string>
    <string name="text_service">Our services</string>
    <string name="btn1">After services</string>
    <string name="btn2">Our warrenty</string>
    <string name="btn3">Delivery services</string>
    <string name="btn4">Calculate units</string>
    <string name="btn_0">Contact us</string>
    <string name="text_1">Our products</string>
    <string name="btn6">Lets goo..!</string>
    <string name="Our_ervices">Our services</string>
    <string name="txt_ser">SERVICES</string>
    <string name="txt_Name">Name</string>
    <string name="txt_fld_1">Enter your name</string>
    <string name="txt_vlue">Email</string>
    <string name="txt_EnterMail">Enter your email</string>
    <string name="txt_message">Message</string>
    <string name="txt_eterMessage">Enter your message</string>
    <string name="btn_submitDetaisl">SUBMIT</string>
    <string name="txt_Services">SERVICES</string>
    <string name="btn_aftServices">After services</string>
    <string name="btn_warrenty">Warrenty</string>
    <string name="btn_delevery">Delivery servise</string>
    <string name="btn_units">Calculate units</string>
    <string name="btn_back">Back</string>
    <string name="text_afterSer">After services</string>
    <string name="text_descript">“As a company, we always work to provide superior services to our customers”</string>
    <string name="text_one"><![CDATA[We will come to your home & provide services at any time.]]></string>
    <string name="text_two">There is a 24-hour emergency number (5678)</string>
    <string name="txt_introThree">We offer 3 free repairs/services</string>
    <string name="txt_four">Our customers are entitled to special discounts on the purchase of parts</string>
    <string name="txt_warrenty">Our warrenty</string>
    <string name="txt_warrenty2">For those new to solar, understanding solar panel warranties can be quite confusing due to the two very distinct warranty conditions, a product warranty and a performance warranty. Like most products and appliances, solar panels have a manufacturer’s product warranty that protects against any failures due to faulty materials or workmanship. Solar panels also have a secondary warranty condition, known as the performance warranty which accounts for a slight loss in performance or degradation over the life of the panel.</string>
    <string name="txt_warren33">"For those new to solar, understanding solar panel warranties can be quite confusing due to the two very distinct warranty conditions, a product warranty and a performance warranty. "</string>
    <string name="txt_warrentyNo1">Product Warranty</string>
    <string name="btn_1">See more</string>
    <string name="btn_2">See more</string>
    <string name="txt_warrenty22">" Performance Warranty"</string>
    <string name="newDescrip">"For those new to solar, understanding solar panel warranties can be quite confusing due to the two very distinct warranty conditions, a product warranty and a performance warranty. Like most products and appliances, solar panels have a manufacturer’s product warranty that protects against any failures due to faulty materials or workmanship. "</string>
    <string name="prd_warrenty">Product warranty</string>
    <string name="txt_des3">" In general, solar panel manufacturers must provide a minimum 10-year product warranty period, however, a growing number of premium manufacturers now offer 15, 20 and even 25-year product warranties."</string>
    <string name="txt_warrenty_2">Performance Warranty</string>
    <string name="txt_des34">The performance warranty also referred to as the power output warranty ensures that the solar panel still produces a minimum amount of power output after the expected 25-year life of a panel. Once installed outside and exposed to sunlight, UV radiation, and high temperatures, all solar panels slowly reduce power output over time due to a well-known phenomenon called Light Induced Degradation or LID. Typically 3% is lost in the first year, while the annual loss over the remaining 24 years is much less, at around 0.3% to 0.7% per year.</string>
    <string name="txt_delevery">Delivery service</string>
    <string name="txt_001">Operating 24 hours for your convenience</string>
    <string name="txt_002">You can book and track the progress of your package via our online platform.</string>
    <string name="txt_003">The product will be delivered very quickly</string>
    <string name="txt_payment">Ease of online payment</string>
    <string name="btn_01">Book my order</string>
    <string name="txt_cal">Solar Calculator</string>
    <string name="txt_cal2">What is the solar calculator</string>
    <string name="text_04">Calculate how much power you need with these solar calculators to estimate the size and the cost of the solar panel array needed for your home energy usage. Ideally, you will know your total kilo-watt hours (kWh) used for the past 12 months or the average monthly kWh used each month. Check your electric bills or contact your local utility for your kWh used.The cost and size of a solar panel system depends on your current and future energy consumption, your location, the types of solar panels and components to be installed, and the availability of rebates and incentives.</string>
    <string name="btn_cal">Calculation</string>
    <string name="new_text01">"For those new to solar, understanding solar panel warranties can be quite confusing due to the two very distinct warranty conditions, a product warranty and a performance warranty. Like most products and appliances, solar panels have a manufacturer’s product warranty that protects against any failures due to faulty materials or workmanship. "</string>
    <string name="txt_warr">Request to warranty claim</string>
    <string name="txt_Pannels" />
    <string name="txtt_solar">Solar Pannels</string>
    <string name="txt_Bttery">Solar Battery</string>
    <string name="txt_inventor">Solar Inverter</string>
    <string name="txt_find">Find Products</string>
    <string name="txt_inverter">EP1500 Plus Series (600W)</string>
    <string name="txt_brand">Brand: MUST(Pft)</string>
    <string name="txt_price">Rs. 87,000</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_one">1</string>
    <string name="txtButton">Buy Now</string>
    <string name="txt_hint">Enter product name</string>
    <string name="fdback_1">Thank you seller. received item with good condition and good packaging. good product quality and good value for money. good promotion.</string>
    <string name="fdb_2">Finally received my parcel today and with no defect..material is very nice..better than expected i have to admit..</string>
    <string name="fdb_03">I have been using the controller for almost 2 weeks.No any single error so far. It works really well. Very worthy product.Thank you, seller.</string>
    <string name="txt_date">2022.02004</string>
    <string name="txt_date1">2022.03.20</string>
    <string name="txt_date02">2022.05.30</string>
    <string name="txt_date03">2022.08.25</string>
    <string name="txt_name">By Kasun Sanjaya</string>
    <string name="txt_name02">By Shashi Perera</string>
    <string name="txt_name03">Malith Bandara</string>
    <string name="txt_name04">By Malith Bandara</string>
    <string name="txt_jum1">Verified Purchase</string>
    <string name="txt_jumb">Verified Purchase</string>
    <string name="txt_jumb3">Verified Purchase</string>
    <string name="txt_products">Visit to buy our precious solar products..</string>
    <string name="txt_deli3">The services we have to bring your solar products to home...</string>
    <string name="txt22">\"The services we have to bring your solar products to home...\"</string>
    <string name="txt_war">About our warranty..</string>
    <string name="txt_1">Sithum</string>
    <string name="txt_brand1">144 Half Cut Mono Solar Panel of 450W PV Solar Module</string>
    <string name="txt_sithum">Pathummm</string>
    <string name="txt_pannel1">High Efficiency A Grade 72cells 370W 390W Monocrystalline PV</string>
    <string name="min_text">Min. Order: 100,000 W</string>
    <string name="price_txt">Rs. 98,000</string>
    <string name="txt2_pannel">370W 25 Years Warranty Solar Power Product Perc Mono Solar</string>
    <string name="price_2">Rs 86,500</string>
    <string name="pannel_text2">390W High Efficiency Monocrystalline Polycrystalline</string>
    <string name="pri">Rs 76,500</string>
    <string name="txt_pric4">Rs 88,750</string>
    <string name="topic_1">High Efficiency Energy Saving LED Flood Lights</string>
    <string name="topic_2">3kwh Solar DC System /Solar Power System</string>
    <string name="topic_3">Smart Solar Power System for Home Small Size</string>
    <string name="topic_5">Solar System 3kwh Power Mono Panel</string>
    <string name="topic_6">"Portable Street Light Rechargeable LED Solar "</string>
    <string name="txt_phone">Phone</string>
    <string name="hint_phone">Enter your mobile number</string>
    <string name="txt_mail">Enter your e-mail address</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>